src/test/deca/context/invalid/type-inequality-left.context
type-inequality-left.deca:11:
